Fix anchor underline color in dark mode

--- a/src/_includes/assets/css/themes/dry.css
+++ b/src/_includes/assets/css/themes/dry.css
@@ -146,7 +146,7 @@ header {
 }
 
 .main a {
-  text-decoration: underline dotted;
+  text-decoration: underline dotted var(--color-fg);
 }
 
 .main a:hover {
